tests/negative/typecheck/orelse.orng
// orelse.orng:6:29: error: expected a value of type `Bool`, got a value of type `Int`
//     let x: ?Bool = .some('4')
//                            ^
// 
fn main() -> Int {
    let x: ?Bool = .some('4')
    x orelse 4
}